--- a/index.html
+++ b/index.html
@@ -8,22 +8,15 @@
 
 </head>
 <body>
-    <h1> project 1 </h1>
-        <div> 주어진 HTML을 가지고 위 사진과 같이 만들기 </div>
-        <h2> project 1-1 </h2>
+     <h2> project 1 </h2>
+    <div> 주어진 HTML을 가지고 사진과 같이 만들기 </div>
         <div>  
             <div class="box">Box 1</div> 
             <div class="box green">Box 2</div>  
             <div class="box blue">Box 3</div> 
         </div>
 
-        <h2> project 1-2 </h2>
-        <div>  
-            <div class="box">Box 1</div> 
-            <div visibility:hidden class="box green">Box 2</div>  
-            <div class="box blue">Box 3</div> 
-        </div>
-        
+      
 
     <h1> project 2 </h1>
       <div class="challenge2"> 
