--- a/google clone1.html
+++ b/google clone1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="googl clone1.css" rel="stylesheet" type="text/css" />
+    <link href="google clone1.css" rel="stylesheet" type="text/css" />
     <script src="https://kit.fontawesome.com/bd2b6b2c64.js" crossorigin="anonymous"></script>
 
 </head>
